fixtures/errors/incomplete_fn/incomplete_fn.esc
fn add(a, b) {
    return a + b
}
fn
val x = 5
